# bns-macros-rs

./: .gitignore  Cargo.toml  build.rs
.github/workflows/: build_aerodrome.yml  build_aerodrome_exp.yml  build_macros.yml  build_poharan.yml
bots/aerodrome/: Cargo.toml  LICENSE  README.md  build.rs
bots/aerodrome-exp/: README.md
bots/aerodrome-exp/src/: configuration.rs  cross_server_lobby.rs  hotkeys.rs  lobby.rs  logging.rs  main.rs  memory.rs  user_interface.rs
bots/aerodrome/src/: configuration.rs  cross_server_lobby.rs  dungeon.rs  hotkeys.rs  lobby.rs  logging.rs  main.rs  memory.rs  user_interface.rs
bots/archive/aerodrome/: README.md
bots/archive/aerodrome-exp/: Cargo.toml  build.rs
bots/archive/aerodrome-exp/src/: dungeon.rs  main.rs  user_interface.rs
bots/archive/aerodrome/src/: configuration.rs  cross_server_lobby.rs  user_interface.rs
bots/poharan/: Cargo.toml  README.md
bots/poharan/src/: camera.rs  configuration.rs  cross_server_lobby.rs  dungeon.rs  game.rs  hotkeys.rs  lobby.rs  logging.rs  main.rs  map.rs  memory.rs  user_interface.rs
macros/: Cargo.toml
macros-dll/: Cargo.toml
macros-dll/.cargo/: config.toml
macros-dll/src/: lib.rs
macros/src/: general.rs  inputs.rs  main.rs
macros/src/classes/: mod.rs
macros/src/classes/assassin/: availability.rs  mod.rs  skills.rs
macros/src/classes/blademaster/: mod.rs
macros/src/classes/default/: mod.rs
macros/src/classes/destroyer/: availability.rs  mod.rs  skills.rs
macros/src/classes/destroyer_third/: availability.rs  mod.rs  skills.rs
macros/src/classes/warlock/: availability.rs  mod.rs  skills.rs
src/: destroyer_earth.rs  general.rs  inputs.rs  main.rs
src/bots/: mod.rs
src/bots/poharan/: configuration.rs  mod.rs
src/classes/: destroyer_earth.rs  mod.rs
src/classes/blademaster/: mod.rs
src/classes/destroyer/: availability.rs  mod.rs
utility/: Cargo.toml
utility/src/: activity.rs  game.rs  lib.rs  memory.rs
