[package]
name = "bns-macros"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

[dependencies.winapi]
version = "0.3.9"
features = [
    "winuser"
]

[dependencies.windows]
version = "0.34.0"
features = [
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse"
]