[package]
name = "bns-macros-dll"
version = "0.1.0"
edition = "2021"

[lib]
name = "bns_macros"
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rust-ini = "0.18"
bns-utility = { path = "../utility" }

[dependencies.windows]
version = "0.34.0"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_SystemServices"
]